# x86web

./: readme.md
example_app/: a.out  example.c  hello  hello.nasm  hello_world_basic.elf
interpreter/: Cargo.toml
interpreter/src/: lib.rs
interpreter/src/cpu/: mod.rs
interpreter/src/cpu/x86/: emulator.rs  instructions.rs  mod.rs  modrm.rs
interpreter/src/memory/: elf.rs  mod.rs
web/: bootstrap.js  index.js  package-lock.json
www/: package.json  webpack.config.js
